[package]
name = "smpp"
version = "0.3.0"
authors = ["Iain H"]
edition = "2024"

[dependencies]
bytes = "1.5"
num_enum = "0.7"
thiserror = "1.0"
tokio = { version = "1.0", features = ["net", "io-util", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"

[dev-dependencies]
argh = "0.1"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "send_sms"

[[example]]
name = "long_running_client"

[[example]]
name = "new_codec_example"

[[bench]]
name = "smpp_benchmarks"
harness = false
